bindings/dotnet/src/Zlink/Native/NativeMethods.Service.cs


    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_publish(IntPtr spot,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicId, IntPtr parts,
        nuint partCount, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_publish_part(IntPtr spot,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string serviceName,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string topicId, ref ZlinkMsg part,
        int flags, ZlinkPartFlag partFlag);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_subscribe(IntPtr spot,
        IntPtr sourceRoutingId, out IntPtr parts, out nuint partCount,
        byte[] serviceNameOut, ref nuint serviceNameLenOut,
        byte[] topicIdOut, ref nuint topicIdLenOut, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_subscribe_part(IntPtr spot,
        out IntPtr sourceRoutingId, byte[] serviceNameBuffer,
        nuint serviceNameCapacity, out nuint serviceNameLenOut,
        byte[] topicIdBuffer, nuint topicIdCapacity, out nuint topicIdLenOut,
        ref ZlinkMsg part, out int hasMore, int flags);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern int zlink_spot_subscription_event(IntPtr spot,
        IntPtr sourceRoutingId, out int subscribed, byte[] serviceNameOut,
        ref nuint serviceNameLenOut, byte[] topicIdOut,
        ref nuint topicIdLenOut, int flags);
}
